plans integration